<resources>
    <string name="app_name">ItHAPPENED</string>
    <string name="google_maps_API_key">AIzaSyCEgmwlc7MnxearzR_k7zOw7moof9ogE9Q</string>
    <string name="MainButton">Start trackingV1</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="profile_settings">Настройки профиля</string>
    <string name="my_events">Мои отслеживания</string>
    <string name="statistics">Статистика</string>
    <string name="events_history">История событий</string>
    <string name="synchronisation">Синхронизация</string>

    <string-array name="toggle_array">
        <item>Обязательно</item>
        <item>Необязательно</item>
        <item>Не выбрано</item>
    </string-array>

    <string name="hint_for_addnewtracking_button">Your title</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="privacy_policy_ref">https://api.ithappened.ru/privacy/policy</string>
    <string name="metrica_add_event">Пользователь добавил событие</string>
    <string name="metrica_user_is_adding_new_event">Пользователь зашел в добавление события</string>
    <string name="metrica_exit_from_add_event">Пользователь вышел из создания события</string>
    <string name="metrica_enter_add_tracking">Пользователь зашел в добавление отслеживания</string>
    <string name="metrica_add_tracking">Пользователь добавил отслеживание</string>
    <string name="metrica_exit_from_add_tracking">Пользователь вышел из добавления отслеживания</string>
    <string name="metrica_enter_edit_event">Пользователь зашел в изменение события</string>
    <string name="metrica_edit_event">Пользователь изменил событие</string>
    <string name="metrica_exit_edit_event">Пользователь вышел из изменения события</string>
    <string name="metrica_enter_edit_tracking">Пользователь зашел в изменение отслеживания</string>
    <string name="metrica_edit_tracking">Пользователь изменил отслеживание</string>
    <string name="metrica_exit_edit_tracking">Пользователь вышел из изменения отслеживания</string>
    <string name="metrica_enter_event_details">Пользователь зашел в детали события</string>
    <string name="metrica_exit_event_details">Пользователь вышел из деталей события</string>
    <string name="metrica_enter_events_hitroy_for_tracking">Пользователь зашел в историю событий по отслеживанию</string>
    <string name="metrica_user_press_button_add_event">Пользователь добавляет событие</string>
    <string name="metrica_exit_event_history_for_tracking">Пользователь вышел из истории событий по отслеживанию</string>
    <string name="metrica_enter_events_histroy">Пользователь зашел в историю событий</string>
    <string name="metrica_cancel_filters">Пользователь отменил фильтры</string>
    <string name="metrica_add_filters">Пользователь добавил фильтры</string>
    <string name="metrica_exit_event_history">Пользователь вышел из истории</string>
    <string name="metrica_enter_profile_settings">Пользователь зашел в настройки профиля</string>
    <string name="metrica_exit_statistics">Пользователь перестал смотреть статистику</string>
    <string name="metrica_recount_statistics">Пользователь пересчитывает статистику</string>
    <string name="metrica_enter_statistics">Пользователь вошел в статистику</string>
    <string name="metrica_user_logout">Пользователь вышел из профиля</string>
    <string name="metrica_delete_tracking">Пользователь удалил отслеживание</string>
    <string name="metrica_user_login">Пользователь привязал аккаунт к google</string>
    <string name="metrica_user_last_activity_add_event">Последний экран, посещенный пользователем - добавить событие</string>
    <string name="metrica_user_last_activity_add_tracking">Последний экран, посещенный пользователем - добавить отслеживание</string>
    <string name="metrica_user_last_activity_edit_event">Последний экран, посещенный пользователем - изменить событие</string>
    <string name="metrica_user_last_activity_edit_tracking">Последний экран, посещенный пользователем - изменить отслеживание</string>
    <string name="metrica_user_last_activity_event_details">Последний экран, посещенный пользователем - информация о событии</string>
    <string name="metrica_user_last_activity_events_for_tracking">Последний экран, посещенный пользователем - все события отслеживания</string>
    <string name="metrica_user_last_activity_events_ref">Последний экран, посещенный пользователем - ссылка на событие</string>
    <string name="metrica_user_time_on_activity_add_event">Время, проведенное пользователем на экране "Добавить событие"</string>
    <string name="metrica_user_time_on_activity_add_tracking">Время, проведенное пользователем на экране "Добавить отслеживание"</string>
    <string name="metrica_user_time_on_activity_edit_event">Время, проведенное пользователем на экране "Изменить событие"</string>
    <string name="metrica_user_time_on_activity_edit_tracking">Время, проведенное пользователем на экране "Изменить отслеживание"</string>
    <string name="metrica_user_time_on_activity_event_details">Время, проведенное пользователем на экране "Информация о событии"</string>
    <string name="metrica_user_time_on_activity_events_for_tracking">Время, проведенное пользователем на экране "Все события отслеживания"</string>
    <string name="metrica_user_time_on_activity_events_ref">Время, проведенное пользователем на экране "Ссылка на событие"</string>
    <string name="metrica_user_customization_mask">Маска выбранных пользователем кастомизаций</string>
    <string name="metrica_user_returns_to_application_after_day">Пользователь вернулся в приложение спустя день</string>
    <string name="metrica_user_returns_to_application_after_week">Пользователь вернулся в приложение спустя неделю</string>
    <string name="metrica_user_returns_to_application_after_month">Пользователь вернулся в приложение спустя месяц</string>
    <string name="metrica_user_use_address_button">Пользователь использовал просмотр адреса</string>
    <string name="metrica_user_add_address_to_event">Пользователь добавил координаты к эвенту</string>
    <string name="title_dialog_for_photo">Загрузить фотографию</string>
    <string name="confirm_add_geoposition">Подтвердить</string>
    <string name="add_geoposition">Добавить геометку</string>
    <string name="error_message">У нас неполадки, извиняемся</string>
    <string name="edit_event_success">Событие изменено</string>
    <string name="get_started_button_text">Начать отслеживать</string>
    <string name="miss_tutorial">Пропустить обучение</string>
    <string name="start_message">Добро пожаловать в ItHappened.  Планируй и достигай целей</string>
    <string name="start_work">Начать работу</string>
    <string name="paid_version">Полная версия</string>
    <string name="delete_event_in_list">Удалить</string>
    <string name="edit">Изменить</string>
    <string name="ImSorryWillBeAnableInANextVersion">Будет доступно в следующей версии</string>
    <string name="ScaleError">В значении шкалы не может быть больше 11 знаков</string>
    <string name="PersonCreatedAnEvent">Пользователь добавил событие</string>
    <string name="Gallery">Галерея</string>
    <string name="make_photo">Фото</string>
</resources>
