<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/my_events"
            android:icon="@drawable/trackings"
            android:title="@string/my_events" />
        <item
            android:id="@+id/statistics"
            android:icon="@drawable/statistics"
            android:title="@string/statistics" />
        <item
            android:id="@+id/events_history"
            android:icon="@drawable/history"
            android:title="@string/events_history" />
        <item
            android:id="@+id/proile_settings"
            android:icon="@drawable/profile"
            android:title="@string/profile_settings" />
        <item
            android:id="@+id/synchronisation"
            android:icon="@drawable/sync"
            android:title="@string/synchronisation"
            android:visible="true" />
    </group>

</menu>
